分布式缓存框架使用